--- a/hugo.toml
+++ b/hugo.toml
@@ -11,21 +11,29 @@ canonifyURLs = true
     name = 'Home'
     pageRef = '/'
     weight = 1
+    [menus.main.params]
+      icon = 'home'
 
 [[menus.main]]
     name = 'About Us'
     pageRef = '/about'
     weight = 2
+    [menus.main.params]
+      icon = 'info'
 
 [[menus.main]]
     name = 'Philosophy'
     pageRef = '/philosophy'
     weight = 3
+    [menus.main.params]
+      icon = 'visibility'
 
 [[menus.main]]
     name = 'Donate'
     pageRef = '/donate'
     weight = 4
+    [menus.main.params]
+      icon = 'favorite'
 
 # Games
 [[menus.games]]
